src/compiletest/tlcell-15.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
   --> $DIR/tlcell-15.rs:15:5
    |
15  |     std::thread::spawn(move || {    // Compile fail
    |     ^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
    |
   ::: $RUST/src/libstd/thread/mod.rs:616:8
    |
616 |     F: Send + 'static,
    |        ---- required by this bound in `std::thread::spawn`
    |
    = help: the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
    = note: required because of the requirements on the impl of `std::marker::Send` for `qcell::TLCell<main::Marker, std::rc::Rc<i32>>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/tlcell-15.rs:15:24: 17:6 owner:qcell::TLCellOwner<main::Marker>, cell:qcell::TLCell<main::Marker, std::rc::Rc<i32>>]`

error[E0277]: `*const main::Marker` cannot be sent between threads safely
   --> $DIR/tlcell-15.rs:15:5
    |
15  |       std::thread::spawn(move || {    // Compile fail
    |  _____^^^^^^^^^^^^^^^^^^_-
    | |     |
    | |     `*const main::Marker` cannot be sent between threads safely
16  | |         assert_eq!(100, **owner.ro(&cell));
17  | |     }).join();
    | |_____- within this `[closure@$DIR/src/compiletest/tlcell-15.rs:15:24: 17:6 owner:qcell::TLCellOwner<main::Marker>, cell:qcell::TLCell<main::Marker, std::rc::Rc<i32>>]`
    |
   ::: $RUST/src/libstd/thread/mod.rs:616:8
    |
616 |       F: Send + 'static,
    |          ---- required by this bound in `std::thread::spawn`
    |
    = help: within `[closure@$DIR/src/compiletest/tlcell-15.rs:15:24: 17:6 owner:qcell::TLCellOwner<main::Marker>, cell:qcell::TLCell<main::Marker, std::rc::Rc<i32>>]`, the trait `std::marker::Send` is not implemented for `*const main::Marker`
    = note: required because it appears within the type `std::marker::PhantomData<*const main::Marker>`
    = note: required because it appears within the type `qcell::TLCellOwner<main::Marker>`
    = note: required because it appears within the type `[closure@$DIR/src/compiletest/tlcell-15.rs:15:24: 17:6 owner:qcell::TLCellOwner<main::Marker>, cell:qcell::TLCell<main::Marker, std::rc::Rc<i32>>]`
